# django-todo-app

./: .env.org  .gitignore  Dockerfile  README.md  docker-compose.yml  generate_secret.sh  pyproject.toml
apps/todo/: admin.py  forms.py  models.py  urls.py  views.py
apps/todo/migrations/: 0001_initial.py
apps/todo/templates/: todo_create.html  todo_delete.html  todo_detail.html  todo_list.html  todo_update.html
core/: urls.py
core/settings/: __init__.py  base.py  development.py  production.py
templates/: base.html
